/* 
이 코드는 게임 관련 알림 메시지 구조를 정의합니다.
위치 정보 메시지와 게임 시작 알림 메시지를 포함하며,
여러 사용자의 위치 정보를 효율적으로 전달할 수 있도록 설계되었습니다.
*/

syntax = "proto3";  // Protobuf 버전 설정

package gameNotification;  // 패키지 이름

// 위치 정보 메시지 구조
message LocationUpdate {
  repeated UserLocation users = 1;  // 여러 사용자 위치 정보를 포함하는 필드

  // 사용자 위치 정보 메시지 구조
  message UserLocation {
    string id = 1;  // 사용자 ID
    float x = 2;    // X 좌표
    float y = 3;    // Y 좌표
  }
}

// 게임 시작 알림 메시지 구조
message Start {
  string gameId = 1;       // 게임 ID
  int64 timestamp = 2;     // 게임 시작 타임스탬프
}
