/* 
이 코드는 게임 생성, 참가, 위치 정보 업데이트를 위한 메시지 구조를 정의합니다.
각 메시지는 관련된 필드를 포함하여 게임의 상태와 사용자 위치 정보를 효과적으로 전달합니다.
게임 ID, 생성 및 참가 시각, 위치 좌표를 포함합니다.
*/

syntax = "proto3";  // Protobuf 버전 설정

package game;  // 패키지 이름

// 게임 생성 핸들러 payload
message CreateGamePayload {
  int64 timestamp = 1;       // 게임 생성 시각
}

// 게임 참가 핸들러 payload
message JoinGamePayload {
  string gameId = 1;         // 게임 ID (UUID)
  int64 timestamp = 2;       // 게임 참가 시각
}

// 위치 정보 업데이트 payload
message LocationUpdatePayload {
  string gameId = 1;         // 게임 ID (UUID)
  float x = 2;               // X 좌표
  float y = 3;               // Y 좌표
}
